# Solana-One

./: app.json  babel.config.js  index.js  index.web.js  metro.config.js  package-lock.json  package.json  path-fs-canvaskit-postinstall.js  repro.js  shims.js  tsc_cmd.txt  tsc_output.txt  tsconfig.json
anchor/: Anchor.toml  DEPLOY.md
anchor/programs/identity_registry/: Cargo.toml
anchor/programs/identity_registry/src/: lib.rs
app/: SplashScreen.tsx  _layout.tsx  approve-transaction.tsx  index.tsx  modal.tsx  security-analytics.tsx
app/(onboarding)/: _layout.tsx  biometric.tsx  identity.tsx  index.tsx  intro.tsx  wallet.tsx
app/(tabs)/: explore.tsx  index.tsx
backend/: .env  package-lock.json  package.json
backend/src/: server.ts
src/analysis/: walletAnalyzer.ts
src/animations/: FadeInView.tsx
src/components/: BiometricModal.tsx  ConfirmationSlider.tsx  ErrorBoundary.tsx  HandleClaimModal.tsx  IdentityBadge.tsx  LockScreen.tsx  RiskIndicator.tsx  SeekerButton.tsx  WalletConnectionHandler.tsx
src/identity/: handleRegistry.ts
src/security/: riskEngine.ts  sessionManager.ts  walletVerification.ts
src/services/: behaviorEngine.ts  biometricService.ts  identityService.ts  mockTransactionService.ts  notificationEngine.ts  skia-loader.ts  skia-loader.web.ts  syncService.ts  transactionRiskAnalyzer.test.ts  transactionRiskAnalyzer.ts  transactionService.ts  walletMonitor.ts
src/solana/: connection.ts  rpcManager.ts  wallets.tsx  wallets.web.tsx  webSocketManager.ts
src/store/: identityStore.ts  useAppStore.ts
src/theme/: index.ts  motion.ts
(+20 files in other folders)
