[package]
name = "identity-registry"
version = "0.1.0"
description = "Solana Identity Registry Program for Seeker Identity Hub"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
